--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,37 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="libraries/selenium-server-standalone-3.141.59.jar"/>
 	<classpathentry kind="lib" path="libraries/testng-6.14.3.jar"/>
+	<classpathentry kind="lib" path="libWeddriverManager/animal-sniffer-annotations-1.14.jar"/>
+	<classpathentry kind="lib" path="libWeddriverManager/bcpkix-jdk15on-1.64.jar"/>
+	<classpathentry kind="lib" path="libWeddriverManager/bcprov-jdk15on-1.64.jar"/>
+	<classpathentry kind="lib" path="libWeddriverManager/byte-buddy-1.8.15.jar"/>
+	<classpathentry kind="lib" path="libWeddriverManager/checker-compat-qual-2.0.0.jar"/>
+	<classpathentry kind="lib" path="libWeddriverManager/commons-codec-1.15.jar"/>
+	<classpathentry kind="lib" path="libWeddriverManager/commons-compress-1.21.jar"/>
+	<classpathentry kind="lib" path="libWeddriverManager/commons-exec-1.3.jar"/>
+	<classpathentry kind="lib" path="libWeddriverManager/commons-io-2.6.jar"/>
+	<classpathentry kind="lib" path="libWeddriverManager/commons-lang3-3.12.0.jar"/>
+	<classpathentry kind="lib" path="libWeddriverManager/dec-0.1.2.jar"/>
+	<classpathentry kind="lib" path="libWeddriverManager/docker-java-3.2.13.jar"/>
+	<classpathentry kind="lib" path="libWeddriverManager/docker-java-api-3.2.13.jar"/>
+	<classpathentry kind="lib" path="libWeddriverManager/docker-java-core-3.2.13.jar"/>
+	<classpathentry kind="lib" path="libWeddriverManager/docker-java-transport-3.2.13.jar"/>
+	<classpathentry kind="lib" path="libWeddriverManager/docker-java-transport-httpclient5-3.2.13.jar"/>
+	<classpathentry kind="lib" path="libWeddriverManager/error_prone_annotations-2.1.3.jar"/>
+	<classpathentry kind="lib" path="libWeddriverManager/gson-2.9.1.jar"/>
+	<classpathentry kind="lib" path="libWeddriverManager/guava-25.0-jre.jar"/>
+	<classpathentry kind="lib" path="libWeddriverManager/httpclient5-5.1.3.jar"/>
+	<classpathentry kind="lib" path="libWeddriverManager/httpcore5-5.1.3.jar"/>
+	<classpathentry kind="lib" path="libWeddriverManager/httpcore5-h2-5.1.3.jar"/>
+	<classpathentry kind="lib" path="libWeddriverManager/j2objc-annotations-1.1.jar"/>
+	<classpathentry kind="lib" path="libWeddriverManager/jackson-annotations-2.10.3.jar"/>
+	<classpathentry kind="lib" path="libWeddriverManager/jackson-core-2.10.3.jar"/>
+	<classpathentry kind="lib" path="libWeddriverManager/jackson-databind-2.10.3.jar"/>
+	<classpathentry kind="lib" path="libWeddriverManager/jna-5.8.0.jar"/>
+	<classpathentry kind="lib" path="libWeddriverManager/jsr305-1.3.9.jar"/>
+	<classpathentry kind="lib" path="libWeddriverManager/okhttp-3.11.0.jar"/>
+	<classpathentry kind="lib" path="libWeddriverManager/okio-1.14.0.jar"/>
+	<classpathentry kind="lib" path="libWeddriverManager/slf4j-api-1.7.36.jar"/>
+	<classpathentry kind="lib" path="libWeddriverManager/webdrivermanager-5.3.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
