--- a/.classpath
+++ b/.classpath
@@ -12,7 +12,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="libraries/selenium-server-standalone-3.141.59.jar"/>
+	<classpathentry kind="lib" path="libraries/selenium-server-standalone-3.141.59.jar" sourcepath="libraries/selenium-server-standalone-3.141.59.jar"/>
 	<classpathentry kind="lib" path="libraries/testng-6.14.3.jar"/>
 	<classpathentry kind="lib" path="libWeddriverManager/animal-sniffer-annotations-1.14.jar"/>
 	<classpathentry kind="lib" path="libWeddriverManager/bcpkix-jdk15on-1.64.jar"/>
