commit - Update Assert and Verify and build function check undisplayed Element

--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,6 @@
 	<classpathentry kind="src" path="actions"/>
 	<classpathentry kind="src" path="interfaces"/>
 	<classpathentry kind="src" path="resources"/>
-	<classpathentry kind="src" path="libraries"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
@@ -46,5 +45,8 @@
 	<classpathentry kind="lib" path="libWeddriverManager/okio-1.14.0.jar"/>
 	<classpathentry kind="lib" path="libWeddriverManager/slf4j-api-1.7.36.jar"/>
 	<classpathentry kind="lib" path="libWeddriverManager/webdrivermanager-5.3.0.jar"/>
+	<classpathentry kind="lib" path="libraries"/>
+	<classpathentry kind="lib" path="libraries/log4j-1.2.16.jar"/>
+	<classpathentry kind="lib" path="libraries/commons-logging-1.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
