--- a/.classpath
+++ b/.classpath
@@ -11,8 +11,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="libraries/selenium-server-standalone-3.141.59.jar" sourcepath="libraries/selenium-server-standalone-3.141.59.jar"/>
-	<classpathentry kind="lib" path="libraries/testng-6.14.3.jar" sourcepath="libraries/testng-6.14.3.jar"/>
 	<classpathentry kind="lib" path="libWeddriverManager/animal-sniffer-annotations-1.14.jar"/>
 	<classpathentry kind="lib" path="libWeddriverManager/bcpkix-jdk15on-1.64.jar"/>
 	<classpathentry kind="lib" path="libWeddriverManager/bcprov-jdk15on-1.64.jar"/>
@@ -45,8 +43,14 @@
 	<classpathentry kind="lib" path="libWeddriverManager/okio-1.14.0.jar"/>
 	<classpathentry kind="lib" path="libWeddriverManager/slf4j-api-1.7.36.jar"/>
 	<classpathentry kind="lib" path="libWeddriverManager/webdrivermanager-5.3.0.jar"/>
-	<classpathentry kind="lib" path="libraries"/>
-	<classpathentry kind="lib" path="libraries/log4j-1.2.16.jar"/>
-	<classpathentry kind="lib" path="libraries/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="librariesSelenium/selenium-3.141.59-nodeps-sources.jar"/>
+	<classpathentry kind="lib" path="librariesSelenium/selenium-server-standalone-3.141.59.jar"/>
+	<classpathentry kind="lib" path="librariesSelenium/testng-6.14.3.jar"/>
+	<classpathentry kind="lib" path="libraryLog4j/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="libraryLog4j/log4j-1.2.16.jar"/>
+	<classpathentry kind="lib" path="libraryReportNG/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="libraryReportNG/guice-3.0.jar"/>
+	<classpathentry kind="lib" path="libraryReportNG/reportng-1.1.4.jar"/>
+	<classpathentry kind="lib" path="libraryReportNG/velocity-1.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
