--- a/.classpath
+++ b/.classpath
@@ -52,5 +52,12 @@
 	<classpathentry kind="lib" path="libraryReportNG/guice-3.0.jar"/>
 	<classpathentry kind="lib" path="libraryReportNG/reportng-1.1.4.jar"/>
 	<classpathentry kind="lib" path="libraryReportNG/velocity-1.4.jar"/>
+	<classpathentry kind="lib" path="libExtendReportV2/bson-3.0.4.jar"/>
+	<classpathentry kind="lib" path="libExtendReportV2/extentreports-2.41.2.jar"/>
+	<classpathentry kind="lib" path="libExtendReportV2/freemarker-2.3.23.jar"/>
+	<classpathentry kind="lib" path="libExtendReportV2/jsoup-1.8.3.jar"/>
+	<classpathentry kind="lib" path="libExtendReportV2/mongodb-driver-3.0.4.jar"/>
+	<classpathentry kind="lib" path="libExtendReportV2/mongodb-driver-core-3.0.4.jar"/>
+	<classpathentry kind="lib" path="libExtendReportV2/sqlite-jdbc-3.8.11.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
